--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="tab-contents"> <!-- Group -->
                     <div id="group" class="classes-four tab-content">
-                        <h3 class="text-2xl font-bold">Why are your Yoga?</h3>
+                        <h3 class="text-2xl font-bold">Why are your Group?</h3>
                         <p>
                             Yoga is great for mind and body balance. Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Ratione quam aliquid error, aspernatur cum mollitia.
@@ -147,12 +147,12 @@
                             Monday-Friday: 6:00pm - 8:00pm <br>
                             Tuesday-Saturday: 10:00am - 12:00pm
                         </p>
-                        <img src="./pht/yoga.jpg" alt="yoga" class="classes-pic">
+                        <img src="./pht/group.webp" alt="group" class="classes-pic">
                     </div>
                 </div>
                 <div class="tab-contents"> <!-- Solo -->
                     <div id="solo" class="classes-four tab-content">
-                        <h3 class="text-2xl font-bold">Why are your Yoga?</h3>
+                        <h3 class="text-2xl font-bold">Why are your Solo?</h3>
                         <p>
                             Yoga is great for mind and body balance. Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Ratione quam aliquid error, aspernatur cum mollitia.
@@ -163,12 +163,12 @@
                             Monday-Friday: 6:00pm - 8:00pm <br>
                             Tuesday-Saturday: 10:00am - 12:00pm
                         </p>
-                        <img src="./pht/yoga.jpg" alt="yoga" class="classes-pic">
+                        <img src="./pht/solo.jpg" alt="solo" class="classes-pic">
                     </div>
                 </div>
                 <div class="tab-contents"> <!-- Stretching -->
                     <div id="stretching" class="classes-four tab-content">
-                        <h3 class="text-2xl font-bold">Why are your Yoga?</h3>
+                        <h3 class="text-2xl font-bold">Why are your Streetching?</h3>
                         <p>
                             Yoga is great for mind and body balance. Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Ratione quam aliquid error, aspernatur cum mollitia.
@@ -179,7 +179,7 @@
                             Monday-Friday: 6:00pm - 8:00pm <br>
                             Tuesday-Saturday: 10:00am - 12:00pm
                         </p>
-                        <img src="./pht/yoga.jpg" alt="yoga" class="classes-pic">
+                        <img src="./pht/stret.webp" alt="Streetching" class="classes-pic">
                     </div>
                 </div>
             </div>
