--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div id="group" class="classes-four tab-content">
                         <h3 class="text-2xl font-bold">Why are your Group?</h3>
                         <p>
-                            Yoga is great for mind and body balance. Lorem ipsum dolor sit amet consectetur adipisicing
+                            Group is great for mind and body balance. Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Ratione quam aliquid error, aspernatur cum mollitia.
                         </p>
                         <h3 class="text-2xl font-bold">When comes Yoga Your Time?</h3>
@@ -154,7 +154,7 @@
                     <div id="solo" class="classes-four tab-content">
                         <h3 class="text-2xl font-bold">Why are your Solo?</h3>
                         <p>
-                            Yoga is great for mind and body balance. Lorem ipsum dolor sit amet consectetur adipisicing
+                            Solo is great for mind and body balance. Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Ratione quam aliquid error, aspernatur cum mollitia.
                         </p>
                         <h3 class="text-2xl font-bold">When comes Yoga Your Time?</h3>
@@ -170,7 +170,8 @@
                     <div id="stretching" class="classes-four tab-content">
                         <h3 class="text-2xl font-bold">Why are your Streetching?</h3>
                         <p>
-                            Yoga is great for mind and body balance. Lorem ipsum dolor sit amet consectetur adipisicing
+                            Streetching is great for mind and body balance. Lorem ipsum dolor sit amet consectetur
+                            adipisicing
                             elit. Ratione quam aliquid error, aspernatur cum mollitia.
                         </p>
                         <h3 class="text-2xl font-bold">When comes Yoga Your Time?</h3>
